        * Persons :
            - The staff users are not related to Contacts anymore.
              Note: the existing Contacts which were related to staff users are sent to the trash.
            - A button to transform a Contact into a user has been added.
        * Reports :
            - You can now create filters which are reserved to Reports.
            - The date fields of referenced models can be used for temporal filtering in the Reports
              (e.g. in a report on Contacts, Photograph's fields are available).
            - The fields with 'choices' (e.g. status of EntityEmails) can now be used as Graphes' abscissa.
            - A new type of chart is available: 'linechart'.
            - Graphs with an enumerable abscissa are now using its color if exists (e.g. billing status).
        * Assistants :
            - The UserMessages produce now notifications (so users can chose to be notified in their browser, emails are not the only way anymore).
        * Billing :
            - You can now define the default statuses (which are notably used as initial values in creation forms).
              You can also define the Invoice status to use when a number ins generated.
        * Geolocation :
            - The bricks which use OpenStreetMap are now used in the default installation (instead of the GoogleMaps ones).

  Developers side :
  -----------------
    - Javascript :
        - The version of Leaflet has been upgraded to "1.9.4".
        - The version of 'FullCalendar' is now "5.11.4".
        - Some math functions have been added as underscorejs mixins: absRound, clamp, scaleRound, scaleTrunc, toRadian, toDegree & toNumber
        - The version of D3js has been upgraded to "7.8.5".
        - The version of jQuery is now "3.7.1" (jQuery-migrate 3.4.1).

    Non breaking changes :
    ----------------------
        # Deprecations :
            - In the class 'creme_core.gui.mass_import.FormRegistry' :